--- a/ui/src/app/login/login.tpl.html
+++ b/ui/src/app/login/login.tpl.html
@@ -15,40 +15,125 @@
     limitations under the License.
 
 -->
-<md-content layout="row" layout-align="center center" style="width: 100%;">
-    <md-card flex="initial" class="tb-login-card" md-theme="tb-dark">
-        <md-card-title>
-            <img src="{{vm.logoSvg}}" aria-label="logo" class="tb-login-logo"/>
-        </md-card-title>
-        <md-progress-linear class="md-warn" style="z-index: 1; max-height: 0px; width: inherit;"
-                            md-mode="indeterminate" ng-disabled="!$root.loading" ng-show="$root.loading"></md-progress-linear>
-        <md-card-content>
-            <form class="login-form" ng-submit="vm.login()">
-                <div layout="column" layout-padding="" id="toast-parent">
-                    <span style="height: 50px;"></span>
-                    <md-input-container class="md-block">
-                        <label translate>login.username</label>
-                        <md-icon aria-label="{{ 'login.username' | translate }}" class="material-icons">
-                            email
-                        </md-icon>
-                        <input id="username-input" type="email" autofocus ng-model="vm.user.name"/>
-                    </md-input-container>
-                    <md-input-container class="md-block">
-                        <label translate>common.password</label>
-                        <md-icon aria-label="{{ 'common.password' | translate }}" class="material-icons">
-                            lock
-                        </md-icon>
-                        <input id="password-input" type="password" ng-model="vm.user.password"/>
-                    </md-input-container>
-                    <div layout-gt-sm="column" layout-align="space-between stretch">
-                        <div layout-gt-sm="column" layout-align="space-between end">
-                            <md-button ui-sref="login.resetPasswordRequest">{{ 'login.forgot-password' | translate }}
-                            </md-button>
-                        </div>
-                    </div>
-                    <md-button class="md-raised" type="submit">{{ 'login.login' | translate }}</md-button>
-                </div>
-            </form>
-        </md-card-content>
-    </md-card>
+<md-content layout="row" layout-align="center center" style="width: 100%; ">
+    <div class="cont">
+        <div class="demo">
+            <div class="login">
+                <md-card flex="initial" class="tb-login-card login" md-theme="tb-dark">
+                    <md-card-title>
+                        <img src="{{vm.logoSvg}}" aria-label="logo" class="tb-login-logo"/>
+                    </md-card-title>
+                    <md-progress-linear class="md-warn" style="z-index: 1; max-height: 0px; width: inherit;"
+                                        md-mode="indeterminate" ng-disabled="!$root.loading" ng-show="$root.loading"></md-progress-linear>
+                    <md-card-content>
+                        <form class="login-form" ng-submit="vm.login()">
+                            <div layout="column" layout-padding="" id="toast-parent">
+                                <!--                    <span style="height: 50px;"></span>-->
+                                <md-input-container class="md-block">
+                                    <label translate>login.username</label>
+                                    <md-icon aria-label="{{ 'login.username' | translate }}" class="material-icons">
+                                        email
+                                    </md-icon>
+                                    <input id="username-input" type="email" autofocus ng-model="vm.user.name"/>
+                                </md-input-container>
+                                <md-input-container class="md-block">
+                                    <label translate>common.password</label>
+                                    <md-icon aria-label="{{ 'common.password' | translate }}" class="material-icons">
+                                        lock
+                                    </md-icon>
+                                    <input id="password-input" type="password" ng-model="vm.user.password"/>
+                                </md-input-container>
+                                <div layout-gt-sm="column" layout-align="space-between stretch">
+                                    <div layout-gt-sm="column" layout-align="space-between end">
+                                        <md-button ui-sref="login.resetPasswordRequest">{{ 'login.forgot-password' | translate }}
+                                        </md-button>
+                                    </div>
+                                </div>
+                                <md-button class="login__submit" type="submit">{{ 'login.login' | translate }}</md-button>
+                            </div>
+                        </form>
+                    </md-card-content>
+                </md-card>
+            </div>
+        </div>
+    </div>
+<!--    <md-card flex="initial" class="tb-login-card" md-theme="tb-dark">-->
+<!--        <md-card-title>-->
+<!--            <img src="{{vm.logoSvg}}" aria-label="logo" class="tb-login-logo"/>-->
+<!--        </md-card-title>-->
+<!--        <md-progress-linear class="md-warn" style="z-index: 1; max-height: 0px; width: inherit;"-->
+<!--                            md-mode="indeterminate" ng-disabled="!$root.loading" ng-show="$root.loading"></md-progress-linear>-->
+<!--        <md-card-content>-->
+<!--            <form class="login-form" ng-submit="vm.login()">-->
+<!--                <div layout="column" layout-padding="" id="toast-parent">-->
+<!--&lt;!&ndash;                    <span style="height: 50px;"></span>&ndash;&gt;-->
+<!--                    <md-input-container class="md-block">-->
+<!--                        <label translate>login.username</label>-->
+<!--                        <md-icon aria-label="{{ 'login.username' | translate }}" class="material-icons">-->
+<!--                            email-->
+<!--                        </md-icon>-->
+<!--                        <input id="username-input" type="email" autofocus ng-model="vm.user.name"/>-->
+<!--                    </md-input-container>-->
+<!--                    <md-input-container class="md-block">-->
+<!--                        <label translate>common.password</label>-->
+<!--                        <md-icon aria-label="{{ 'common.password' | translate }}" class="material-icons">-->
+<!--                            lock-->
+<!--                        </md-icon>-->
+<!--                        <input id="password-input" type="password" ng-model="vm.user.password"/>-->
+<!--                    </md-input-container>-->
+<!--                    <div layout-gt-sm="column" layout-align="space-between stretch">-->
+<!--                        <div layout-gt-sm="column" layout-align="space-between end">-->
+<!--                            <md-button ui-sref="login.resetPasswordRequest">{{ 'login.forgot-password' | translate }}-->
+<!--                            </md-button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <md-button class="md-raised" type="submit">{{ 'login.login' | translate }}</md-button>-->
+<!--                </div>-->
+<!--            </form>-->
+<!--        </md-card-content>-->
+<!--    </md-card>-->
 </md-content>
+<script>
+    $(document).ready(function() {
+
+        var animating = false,
+            submitPhase1 = 1100,
+            submitPhase2 = 400,
+            logoutPhase1 = 800,
+            $login = $(".login"),
+            $app = $(".app");
+
+        function ripple(elem, e) {
+            $(".ripple").remove();
+            var elTop = elem.offset().top,
+                elLeft = elem.offset().left,
+                x = e.pageX - elLeft,
+                y = e.pageY - elTop;
+            var $ripple = $("<div class='ripple'></div>");
+            $ripple.css({top: y, left: x});
+            elem.append($ripple);
+        };
+
+        $(document).on("click", ".login__submit", function(e) {
+            if (animating) return;
+            animating = true;
+            var that = this;
+            ripple($(that), e);
+            $(that).addClass("processing");
+            setTimeout(function() {
+                $(that).addClass("success");
+                setTimeout(function() {
+                    $app.show();
+                    $app.css("top");
+                    $app.addClass("active");
+                }, submitPhase2 - 70);
+                setTimeout(function() {
+                    $login.hide();
+                    $login.addClass("inactive");
+                    animating = false;
+                    $(that).removeClass("success processing");
+                }, submitPhase2);
+            }, submitPhase1);
+        });
+    });
+</script>
